Add sign in feature tests. Not redirecting yet after log in

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Sign up', new_user_registration_path %>
+<%= link_to 'Sign in', user_session_path %>
 <!-- <%= flash[:notice] = "Welcome! You have signed up successfully" %> -->
 <h1>It's LaundryTime! </h1>
 <h2>Welcome to LaundryTime for Unicorn-Apartments</h2>
@@ -6,4 +8,3 @@
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
   <!-- <button type="button">Sign up</button> -->
-  <%= link_to 'Sign up', new_user_registration_path %>
